# byefrontend

./: .gitignore  MANIFEST.in  NOTES.md  README.md  ROADMAP.md  bump_version.py  count_lines.py  hatch_update.py  pyproject.toml  requirements.txt
bfe_test/: manage.py
bfe_test/bfe_test/: asgi.py  settings.py  urls.py  wsgi.py
bfe_test/raw_bfe/: apps.py
bfe_test/template/: forms.py  models.py  urls.py  views.py
bfe_test/template/migrations/: 0001_initial.py  0002_dataforfiltering.py
bfe_test/template/templates/: basic_view.html  data_explorer.html  feedback.html  feedback_thanks.html  widgets_demo.html
src/bfe_site/: manage.py
src/bfe_site/bfe_site/: asgi.py  settings.py  urls.py  wsgi.py
src/bfe_site/byefrontend/: apps.py
src/byefrontend/: __init__.py  apps.py  crypto.py  decorators.py  fields.py  form_fields.py  models.py  render.py  storage.py  tests.py  utils.py  views.py
src/byefrontend/builders/: __init__.py  base.py
src/byefrontend/configs/: __init__.py  _helpers.py  base.py  binary.py  button.py  card.py  code_box.py  data_filter.py  datepicker.py  document_link.py  document_viewer.py  dropdown.py  file_upload.py  form.py  hyperlink.py  inline_form.py  inline_group.py  input.py  label.py  navbar.py  paragraph.py  popout.py  radio_group.py  secret.py  table.py  tag_input.py  text_editor.py  thumbnail.py  title.py
src/byefrontend/widgets/: __init__.py  async.py  base.py  binary.py  button.py  card.py  char_input.py  code_box.py  containers.py  data_filter.py  datepicker.py  document_link.py  document_viewer.py  dropdown.py  file_upload.py  (+17 more)
(+24 files in other folders)
