[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byefrontend"
description = "A Django app providing custom widgets and render functions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Test Studios", email = "test_studios@teststudios.com"}
]
dependencies = [
  "django>=5.1",
  "cryptography==43.0.3"
]
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/nommu-moose/byefrontend"
"Repository" = "https://github.com/nommu-moose/byefrontend"
"Bug Tracker" = "https://github.com/nommu-moose/byefrontend/issues"

[tool.hatch.version]
path = "src/byefrontend/__init__.py"

[tool.hatch.metadata]
dynamic = ["version"]
